# tinyCompilerforTiger

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: ASTPrinter.h  CodeGenerator.h  Lexer.h  Parser.h  SymbolTable.h  Token.h  TypeChecker.h  abstract.h  codeGenerator.h  generator.h  lexer.h  outputAST.h  parser.h  printabs.h  symbolTab.h  symtbl.h  token.h  tychecker.h  typeCheck.h
src/: ASTPrinter.cpp  CodeGenerator.cpp  Lexer.cpp  Parser.cpp  SymbolTable.cpp  TypeChecker.cpp  codeGenerator.cpp  generator.cpp  lexer.cpp  main.cpp  outputAST.cpp  parser.cpp  printabs.cpp  symbolTab.cpp  symtbl.cpp  tychecker.cpp  typeCheck.cpp
src/runtime/: runtime.c
testcases/: queen.tig  test1-opt0.ll  test1.tig  test_lcs.tig  test_matrix_mul.tig  test_notEq.tig  test_prime.tig
